tests/errors/interpreter/duplicate_param.ny
kawaii function(x, x) => {}

uWu_nyaa() => {
}